force-app/main/default/objects/Program__c/fields/No_of_Courses__c.field-meta.xml
<CustomField>
    <fullName>No_of_Courses__c</fullName>
    <label>No of Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>