force-app/main/default/objects/Program__c/fields/Program_Duration__c.field-meta.xml
<CustomField>
    <fullName>Program_Duration__c</fullName>
    <label>Program Duration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>