force-app/main/default/objects/Program__c/fields/Skills_Gained__c.field-meta.xml
<CustomField>
    <fullName>Skills_Gained__c</fullName>
    <label>Skills Gained</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>